<resources>
    <string name="app_name">DigitalBank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Generic Erros -->
    <string name="email_empty">Verifique o e-mail digitado</string>
    <string name="name_empty">Verifique o nome digitado</string>
    <string name="celular_empty">Verifique o celular digitado</string>
    <string name="senhas_iguais">suas senhas não coinscidem</string>
    <string name="celular_incorreto">O celular digitado está invalido</string>
    <string name="valor_da_recarga">Insira o valor que deseja recarregar no celular</string>

    <!-- loginFragment Erros -->
    <string name="digiteSuaSenha">Digite sua senha de acesso ao sistema</string>
    <string name="digiteSeuEmail">Digite seu e-mail de acesso ao aplicativo</string>

    <!-- registerFragment Erros -->
    <string name="preenchaEmail">Preencha seu e-mail de acesso ao aplicativo</string>
    <string name="verifiqueEmail">Prontinho! enviamos um e-mail com o link para redefinição da senha, verifique sua caixa de SPAM</string>

    <!-- Login Fragment -->
    <string name="email_loginFragment">E-mail</string>
    <string name="senha_LoginFragment">Senha</string>
    <string name="login_btn_LoginFragment">Login</string>
    <string name="criar_conta_btn_LoginFragment">Criar Conta</string>
    <string name="esqueceu_a_senha_btn_LoginFragment">Esqueceu a senha?</string>

    <!-- Recover Fragment -->
    <string name="text_topo_RecoverFragment">Digite seu e-mail do cadastro para enviarmos um link para redefinição de senha</string>
    <string name="e_mail_text_RecoverFragment">E-mail</string>
    <string name="email_RecoverFragment">Digite seu e-mail</string>
    <string name="btn_enviarLink_RecoverFragment">Enviar Email</string>

    <!-- Register Fragment -->
    <string name="txt_nome_RegiterFragment">Nome</string>
    <string name="txt_email_RegisterFragment">E-mail</string>
    <string name="txt_telefone_RegisterFragment">Telefone</string>
    <string name="txt_senha_RegisterFragment">Senha</string>
    <string name="txt_confirm_senha_RegisterFragment">Senha</string>
    <string name="input_confirm_senha_RegisterFragment">Confirme sua senha</string>
    <string name="input_nome_RegisterFragment">Digite seu Nome</string>
    <string name="input_senha_RegisterFragment">Digite sua senha</string>
    <string name="input_email_RegisterFragment">Digite seu e-mail</string>
    <string name="input_telefone_RegisterFragment">Digite seu número de celular</string>
    <string name="btn_criar_conta_RegisterFragment">Criar Conta</string>

    <!-- profileFragment -->
    <string name="txt_nome_profileFragment">Perfil</string>
    <string name="txt_email_profileFragment">E-mail</string>
    <string name="txt_telefone_profileFragment">Telefone</string>
    <string name="input_nome_profileFragment">Digite seu Nome</string>
    <string name="input_email_profileFragment">Digite seu e-mail</string>
    <string name="input_telefone_profileFragment">Digite seu número de celular</string>
    <string name="btn_atualizarperfil_profileFragment">Atualizar perfil</string>


    <!-- Mensagens usada por padrao no bottomSheet -->
    <string name="title_bottom_sheet">Atenção</string>
    <string name="message_bottom_sheet">Mensagem generica aqui ocorreu um erro faça isso para solucionar</string>
    <string name="button_bottom_sheet">Entendido</string>

    <!--    Erros Firebase Authentication-->
    <string name="login_or_password_error">Seu e-mail ou senha inseridos estao incorretos</string>
    <string name="account_not_registered_register_fragment">Não encontramos nenhum cadastro com este e-mail :(.</string>
    <string name="invalid_email_register_fragment">Verifique o e-mail inserido</string>
    <string name="invalid_password_register_fragment">Email ou senha incorretos, verifique seus dados e tente novamente</string>
    <string name="email_in_use_register_fragment">Possuimos um cadastro com este e-mail, opte por redefinir seua senha de acesso</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="ocorreu_um_erro">Ocorreu um erro</string>

    <!-- Home Fragment -->
    <string name="texto_formatado_valor">R$ %1s</string>

    <!-- comprovante de pagamento Fragment -->
    <string name="title_toolbar">Comprovante de Deposito</string>
    <string name="title_comprovante">Deposito efetuardo\n com sucesso!</string>
    <string name="subtitle_comprovante">Seu deposito ficará disponivel em até 48h úteis</string>
    <string name="code_transaction">Codigo da Transação:</string>
    <string name="date_transaction">Data da Transação</string>
    <string name="amont_transaction">Valor do deposito</string>


    <!-- comprovante de recarga Fragment -->
    <string name="title_toolbar_recarga">Comprovante de Recarga</string>
    <string name="title_comprovante_recarga">Recarga efetuarda\n com sucesso!</string>
    <string name="subtitle_comprovante_recarga">Seu credito estará disponivel em alguns minutos</string>
    <string name="code_transaction_recarga">Codigo da Transação:</string>
    <string name="date_transaction_recarga">Data da Recarga</string>
    <string name="amont_transaction_recarga">Valor do deposito</string>
    <string name="number_recarga">Numero</string>


</resources>