<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_default"
                    android:text="@string/txt_nome_profileFragment"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_user"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="16dp">

                </ImageView>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_profileFragment"
                android:layout_marginTop="32dp"
                android:textColor="@color/color_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.EditText"
                android:layout_marginTop="4dp"
                tools:hint="@string/input_nome_profileFragment"
                android:drawableStart="@drawable/ic_user"
                android:drawableTint="@color/color_default" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email_profileFragment"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_email"
                android:enabled="false"
                style="@style/Theme.EditText"
                tools:hint="@string/input_email_profileFragment"
                android:textColorHint="@color/color_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_telefone_profileFragment"
                android:layout_marginTop="16dp"
                android:textColor="@color/color_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_around"
                android:layout_marginTop="4dp"
                app:mask="(##) #####-####"
                style="@style/Theme.EditText"
                android:inputType="number"
                tools:hint="@string/input_telefone_profileFragment"
                android:drawableStart="@drawable/ic_phone_line" />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:text="@string/btn_atualizarperfil_profileFragment"
                android:layout_marginTop="24dp"
                app:backgroundTint="@color/color_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/color_default"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center_horizontal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_send_Link" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>